fix page about version mobile

--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -305,6 +305,10 @@ body {
 	display: none;
 }
 
+.about__information {
+	display: none;
+}
+
 @media screen and (min-width: 1024px) {
 	.header-container {
 		justify-content: space-around;
